sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value fin
  while (fin==false){
         ^AlgBubbleSort1:4: error: not found: value fin
    fin==true
    ^AlgBubbleSort1:8: error: not found: value fin
        fin==false
        ^